--- a/aufgabe/alphabet_soup/Alphabet_2738938.ipynb
+++ b/aufgabe/alphabet_soup/Alphabet_2738938.ipynb
@@ -921,6 +921,272 @@
     "        \n",
     "        and now I have tested we can detect letters. Now I want the detected letters to be colored, for 'KARE' there will be 4 different colors for 'BUDUR' also 4 and likewise"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def DrawSquareFromText_NoCollision_WithBoxes(img, txt, addresses, cell_size=30):\n",
+    "    \"\"\"\n",
+    "    Draw a square connecting the centers of the cells containing the characters in the given text,\n",
+    "    ensuring angles are close to 90 degrees and edges do not collide.\n",
+    "    Additionally, draw a box around the chosen cells and change the color of chosen letters to orange.\n",
+    "\n",
+    "    Args:\n",
+    "        img (ndarray): Input image.\n",
+    "        txt (str): Text to draw the square for (e.g., \"KARE\").\n",
+    "        addresses (dict): Dictionary of detected letter addresses.\n",
+    "        cell_size (int): Size of each cell in the grid.\n",
+    "\n",
+    "    Returns:\n",
+    "        img_with_square (ndarray): Image with the square drawn.\n",
+    "    \"\"\"\n",
+    "    import numpy as np\n",
+    "    import cv2 as cv\n",
+    "\n",
+    "    # Helper function to calculate cell center\n",
+    "    def get_cell_center(cell):\n",
+    "        return (cell[1] * cell_size + cell_size // 2, cell[0] * cell_size + cell_size // 2)\n",
+    "\n",
+    "    # Helper function to check edge intersection\n",
+    "    def edges_intersect(p1, p2, q1, q2):\n",
+    "        def ccw(a, b, c):\n",
+    "            return (c[1] - a[1]) * (b[0] - a[0]) > (b[1] - a[1]) * (c[0] - a[0])\n",
+    "        \n",
+    "        return ccw(p1, q1, q2) != ccw(p2, q1, q2) and ccw(p1, p2, q1) != ccw(p1, p2, q2)\n",
+    "\n",
+    "    # Extract centers for each character in the text\n",
+    "    centers = {char: [get_cell_center(cell) for cell in addresses[char]] for char in txt}\n",
+    "\n",
+    "    # If any character is not detected, return the original image\n",
+    "    if any(len(centers[char]) == 0 for char in txt):\n",
+    "        print(f\"Error: One or more characters in {txt} are not detected.\")\n",
+    "        return img\n",
+    "\n",
+    "    # Find the best configuration of cell centers that form a square\n",
+    "    best_square = None\n",
+    "    best_score = float('inf')\n",
+    "\n",
+    "    for k_center in centers[txt[0]]:\n",
+    "        for a_center in centers[txt[1]]:\n",
+    "            for r_center in centers[txt[2]]:\n",
+    "                for e_center in centers[txt[3]]:\n",
+    "                    # Calculate angles for all corners\n",
+    "                    angle_k = calculate_angle(e_center, k_center, a_center)\n",
+    "                    angle_a = calculate_angle(k_center, a_center, r_center)\n",
+    "                    angle_r = calculate_angle(a_center, r_center, e_center)\n",
+    "                    angle_e = calculate_angle(r_center, e_center, k_center)\n",
+    "\n",
+    "                    # Check for edge collisions\n",
+    "                    if edges_intersect(k_center, a_center, r_center, e_center):\n",
+    "                        continue\n",
+    "                    if edges_intersect(a_center, r_center, e_center, k_center):\n",
+    "                        continue\n",
+    "\n",
+    "                    # Check if angles are close to 90 degrees and similar to each other\n",
+    "                    angles = [angle_k, angle_a, angle_r, angle_e]\n",
+    "                    mean_angle = np.mean(angles)\n",
+    "                    angle_deviation = np.std(angles)  # Variation between angles\n",
+    "                    score = abs(mean_angle - 90) + angle_deviation\n",
+    "\n",
+    "                    if score < best_score:\n",
+    "                        best_score = score\n",
+    "                        best_square = (k_center, a_center, r_center, e_center)\n",
+    "\n",
+    "    if best_square:\n",
+    "        # Draw the square and highlight chosen cells\n",
+    "        img_with_square = img.copy()\n",
+    "\n",
+    "        # Draw the square\n",
+    "        img_with_square = DrawIt(img_with_square, (best_square[0], best_square[1]), box=False, diagonals=False, dpen=(255, 0, 0))\n",
+    "        img_with_square = DrawIt(img_with_square, (best_square[1], best_square[2]), box=False, diagonals=False, dpen=(0, 255, 0))\n",
+    "        img_with_square = DrawIt(img_with_square, (best_square[2], best_square[3]), box=False, diagonals=False, dpen=(0, 0, 255))\n",
+    "        img_with_square = DrawIt(img_with_square, (best_square[3], best_square[0]), box=False, diagonals=False, dpen=(255, 255, 0))\n",
+    "\n",
+    "        # Highlight the selected cells and color the letters\n",
+    "        for center in best_square:\n",
+    "            # Calculate the bounding box for the current cell\n",
+    "            top_left = (center[0] - cell_size // 2, center[1] - cell_size // 2)\n",
+    "            bottom_right = (center[0] + cell_size // 2, center[1] + cell_size // 2)\n",
+    "\n",
+    "            # Ensure the coordinates are within the image bounds\n",
+    "            top_left = (max(0, top_left[1]), max(0, top_left[0]))\n",
+    "            bottom_right = (min(img_with_square.shape[1] - 1, bottom_right[1]), min(img_with_square.shape[0] - 1, bottom_right[0]))\n",
+    "\n",
+    "            # Draw the box around the cell\n",
+    "            box_coords = (top_left[::-1], bottom_right[::-1])\n",
+    "            img_with_square = DrawIt(img_with_square, box_coords, box=True, diagonals=False, dpen=(0, 165, 255))\n",
+    "\n",
+    "            # Apply the orange mask for the letter region\n",
+    "            cell_region = img_with_square[top_left[1]:bottom_right[1], top_left[0]:bottom_right[0]]\n",
+    "            gray_cell = cv.cvtColor(cell_region, cv.COLOR_BGR2GRAY)\n",
+    "            _, binary_cell = cv.threshold(gray_cell, 240, 255, cv.THRESH_BINARY_INV)  # Extract non-white regions\n",
+    "\n",
+    "            # Find contours in the binary cell region\n",
+    "            contours, _ = cv.findContours(binary_cell, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE)\n",
+    "            for contour in contours:\n",
+    "                cv.drawContours(cell_region, [contour], -1, (0, 165, 255), thickness=cv.FILLED)\n",
+    "\n",
+    "        return img_with_square\n",
+    "\n",
+    "    print(\"No valid square configuration found.\")\n",
+    "    return img\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def BiggestHexagon(img, txt, addresses, cell_size=30):\n",
+    "    \"\"\"\n",
+    "    Draw the largest possible hexagon from the detected letters and highlight the cells.\n",
+    "    Args:\n",
+    "        img (ndarray): Input image.\n",
+    "        txt (str): Text to draw the hexagon for.\n",
+    "        addresses (dict): Dictionary of detected letter addresses.\n",
+    "        cell_size (int): Size of each cell in the grid.\n",
+    "    Returns:\n",
+    "        img_with_hexagon (ndarray): Image with the hexagon drawn.\n",
+    "    \"\"\"\n",
+    "    # Logic for BiggestHexagon similar to DrawSquareFromText_NoCollision_WithBoxes\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if best_hexagon:\n",
+    "    # Draw the hexagon and highlight chosen cells\n",
+    "    img_with_hexagon = img.copy()\n",
+    "\n",
+    "    # Draw the edges of the hexagon\n",
+    "    for i in range(len(best_hexagon)):\n",
+    "        img_with_hexagon = DrawIt(\n",
+    "            img_with_hexagon,\n",
+    "            (best_hexagon[i], best_hexagon[(i + 1) % len(best_hexagon)]),\n",
+    "            box=False,\n",
+    "            diagonals=False,\n",
+    "            dpen=(255, 0, 255),\n",
+    "        )\n",
+    "\n",
+    "    # Highlight the chosen cells and change the colors of the letters\n",
+    "    for center in best_hexagon:\n",
+    "        # Calculate the bounding box for the current cell\n",
+    "        top_left = (center[0] - cell_size // 2, center[1] - cell_size // 2)\n",
+    "        bottom_right = (center[0] + cell_size // 2, center[1] + cell_size // 2)\n",
+    "\n",
+    "        # Ensure the coordinates are within the image bounds\n",
+    "        top_left = (max(0, top_left[1]), max(0, top_left[0]))\n",
+    "        bottom_right = (\n",
+    "            min(img_with_hexagon.shape[1] - 1, bottom_right[1]),\n",
+    "            min(img_with_hexagon.shape[0] - 1, bottom_right[0]),\n",
+    "        )\n",
+    "\n",
+    "        # Draw the box around the cell\n",
+    "        box_coords = (top_left[::-1], bottom_right[::-1])\n",
+    "        img_with_hexagon = DrawIt(\n",
+    "            img_with_hexagon, box_coords, box=True, diagonals=False, dpen=(0, 255, 255)\n",
+    "        )\n",
+    "\n",
+    "        # Apply the orange mask for the letter region\n",
+    "        cell_region = img_with_hexagon[top_left[1]:bottom_right[1], top_left[0]:bottom_right[0]]\n",
+    "        gray_cell = cv.cvtColor(cell_region, cv.COLOR_BGR2GRAY)\n",
+    "        _, binary_cell = cv.threshold(gray_cell, 240, 255, cv.THRESH_BINARY_INV)  # Extract non-white regions\n",
+    "\n",
+    "        # Find contours in the binary cell region\n",
+    "        contours, _ = cv.findContours(binary_cell, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE)\n",
+    "        for contour in contours:\n",
+    "            cv.drawContours(cell_region, [contour], -1, (0, 165, 255), thickness=cv.FILLED)\n",
+    "\n",
+    "    return img_with_hexagon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def SearchInAlphabetSoup_Hu_Color(img, txt='KARE'):\n",
+    "    \"\"\"\n",
+    "    Search for letters in the given image based on Hu moments and color them using multiple reference moments.\n",
+    "    Args:\n",
+    "        img (ndarray): Input image.\n",
+    "        txt (str): Word to search for in the image.\n",
+    "    Returns:\n",
+    "        result (ndarray): Processed image with detected letters colored.\n",
+    "    \"\"\"\n",
+    "    import cv2 as cv\n",
+    "    import numpy as np\n",
+    "\n",
+    "    # Reference Hu moments for known characters\n",
+    "    reference_hu_moments = {\n",
+    "        'R': [[...]],  # Include the full list of reference Hu moments\n",
+    "        'B': [[...]],\n",
+    "        # Add all other letters...\n",
+    "    }\n",
+    "\n",
+    "    # Define colors for each character\n",
+    "    colors = {\n",
+    "        'K': (255, 0, 0),\n",
+    "        'A': (0, 255, 0),\n",
+    "        'R': (0, 0, 255),\n",
+    "        'E': (255, 255, 0),\n",
+    "        # Add colors for other letters...\n",
+    "    }\n",
+    "\n",
+    "    # Convert to grayscale and binary\n",
+    "    gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
+    "    _, binary = cv.threshold(gray, 128, 255, cv.THRESH_BINARY_INV)\n",
+    "\n",
+    "    # Find contours\n",
+    "    contours, _ = cv.findContours(binary, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "    # Initialize result image and addresses\n",
+    "    result = img.copy()\n",
+    "    addresses = {char: [] for char in txt}\n",
+    "\n",
+    "    # Cell size\n",
+    "    cell_size = 30\n",
+    "    threshold_margin = 1.5\n",
+    "\n",
+    "    for i, contour in enumerate(contours):\n",
+    "        x, y, w, h = cv.boundingRect(contour)\n",
+    "        roi = binary[y:y + h, x:x + w]\n",
+    "        moments = cv.moments(roi)\n",
+    "        hu_moments = cv.HuMoments(moments).flatten()\n",
+    "        hu_moments = -np.sign(hu_moments) * np.log10(np.abs(hu_moments) + 1e-12)\n",
+    "\n",
+    "        detected_char = None\n",
+    "        min_distance = float('inf')\n",
+    "        for char, ref_hus in reference_hu_moments.items():\n",
+    "            char_min_distance = min(\n",
+    "                np.linalg.norm(np.array(hu_moments[:6]) - np.array(ref_hu[:6])) for ref_hu in ref_hus\n",
+    "            )\n",
+    "            if char_min_distance < min_distance:\n",
+    "                min_distance = char_min_distance\n",
+    "                detected_char = char\n",
+    "\n",
+    "        if detected_char and min_distance < threshold_margin:\n",
+    "            addresses[detected_char].append((x // cell_size, y // cell_size))\n",
+    "            letter_mask = binary[y:y + h, x:x + w]\n",
+    "            color = colors[detected_char]\n",
+    "            result[y:y + h, x:x + w][letter_mask > 0] = color\n",
+    "\n",
+    "    if txt == \"KARE\":\n",
+    "        result = DrawSquareFromText_NoCollision_WithBoxes(result, txt, addresses, cell_size)\n",
+    "    elif txt == \"6KENAR\":\n",
+    "        result = BiggestHexagon(result, txt, addresses, cell_size)\n",
+    "\n",
+    "    return result\n"
+   ]
   }
  ],
  "metadata": {
