--- a/aufgabe/alphabet_soup/Alphabet_2738938.ipynb
+++ b/aufgabe/alphabet_soup/Alphabet_2738938.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,12 +413,12 @@
     "   - Utilize multi-threading or GPU-based libraries like TensorFlow or PyTorch to compute areas and check convexity/collisions in parallel for multiple configurations.\n",
     "\n",
     "2. **Geometric Heuristics:**\n",
-    "   - Instead of iterating over all possible fifth and sixth vertices, use heuristics like:\n",
+    "   - Instead of iterating over all possible fifth and sixth vertices, using heuristics like:\n",
     "     - Favoring vertices closer to the centroid of the initial four vertices.\n",
     "     - Penalizing configurations that deviate significantly from regular hexagon proportions.\n",
     "\n",
     "3. **Convex Hull Techniques:**\n",
-    "   - Pre-compute a convex hull of the combined vertices and select subsets that maintain convexity directly.\n",
+    "   - Pre-computing a convex hull of the combined vertices and select subsets that maintain convexity directly.\n",
     "\n",
     "---\n",
     "\n",
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +680,6 @@
     "    Returns:\n",
     "        float: Euclidean distance between p1 and p2.\n",
     "    \"\"\"\n",
-    "    import numpy as np\n",
     "\n",
     "    x1, y1 = p1\n",
     "    x2, y2 = p2\n",
@@ -703,8 +702,6 @@
     "    Returns:\n",
     "        img_with_hexagon (ndarray): Image with the hexagon drawn.\n",
     "    \"\"\"\n",
-    "    import numpy as np\n",
-    "    import cv2 as cv\n",
     "\n",
     "    # Helper function to calculate cell center\n",
     "    def get_cell_center(cell):\n",
@@ -836,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,12 +1072,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(SearchInAlphabetSoup(img, 'KARE'))"
+    "plt.imshow(SearchInAlphabetSoup(img, 'BUDUR'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
