feedback_cleaned_up

--- a/me_term_project/05_feedback_mechanism.ipynb
+++ b/me_term_project/05_feedback_mechanism.ipynb
@@ -1,6 +1,86 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. System Initialization\n",
+    "\n",
+    "Live feedback system for defect classification with dynamic cluster adaptation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import gridspec\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pickle\n",
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.manifold import TSNE\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "\n",
+    "\n",
+    "import skimage.io\n",
+    "from scipy.spatial.distance import cdist\n",
+    "\n",
+    "import sys\n",
+    "sys.path.insert(0,'../')\n",
+    "from helper import classification_tools as ct\n",
+    "from helper import visualize as vis\n",
+    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fc1 features saved from the previous step\n",
+    "fc1_path = Path('..','data','features','VGG16_fc1_features_std.pickle')\n",
+    "assert fc1_path.is_file()\n",
+    "\n",
+    "# label encoder model which converts string labels to integers.\n",
+    "le_path = Path('..','models','label_encoder.pickle')\n",
+    "assert le_path.is_file()\n",
+    "\n",
+    "# load the data and label encoder into memory\n",
+    "with open(fc1_path, 'rb') as f:\n",
+    "    data = pickle.load(f)\n",
+    "\n",
+    "with open(le_path, 'rb') as f:\n",
+    "    le = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = data['filename']  # file paths to each image\n",
+    "fc1 = data['features']  # array containing fc1 features for each file\n",
+    "labels = data['labels']  # string labels for each image\n",
+    "y_gt = le.transform(labels)  # integer labels for each image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Feedback System Implementation\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -20,68 +100,78 @@
     "    def __init__(self):\n",
     "        self.model = None\n",
     "        self.pca = None\n",
-    "        self.data = []\n",
-    "        self.labels = []\n",
+    "        self.new_data = []\n",
+    "        self.new_labels = []\n",
+    "        self.n_clusters = 7  # Initial cluster count\n",
     "        self.load_initial_model()\n",
     "\n",
     "    def load_initial_model(self):\n",
-    "        # Load pre-trained PCA and KMeans\n",
-    "        with open('../data/features/VGG16_fcl_features_std.pickle', 'rb') as f:\n",
-    "            features = pickle.load(f)['features']\n",
-    "        self.pca = PCA(n_components=35, whiten=True, svd_solver='full')\n",
-    "        self.pca.fit(features)  # Use loaded features instead of undefined 'fci'\n",
-    "        self.model = KMeans(n_clusters=7, init='k-means++', n_init=500)\n",
-    "        self.model.fit(self.pca.transform(features))  # Use the same features\n",
+    "        \"\"\"Load pre-trained models with fixed PCA components\"\"\"\n",
+    "        self.pca = PCA(n_components=50, whiten=True, svd_solver='full')\n",
+    "        self.pca.fit(fc1)  # Fit on initial dataset\n",
+    "        \n",
+    "        # Initial clustering\n",
+    "        self.model = KMeans(n_clusters=self.n_clusters, init='k-means++', n_init=10)\n",
+    "        self.model.fit(self.pca.transform(fc1))\n",
     "\n",
-    "    def process_feedback(self, image_features):\n",
-    "        # Predict\n",
-    "        reduced_features = self.pca.transform([image_features])\n",
-    "        cluster = self.model.predict(reduced_features)[0]\n",
+    "    def process_feedback(self, features):\n",
+    "        \"\"\"Process user feedback for a single image\"\"\"\n",
+    "        reduced = self.pca.transform([features])\n",
+    "        cluster = self.model.predict(reduced)[0]\n",
     "        predicted_label = le.inverse_transform([cluster])[0]\n",
     "\n",
-    "        # Get feedback\n",
     "        is_correct = input(f\"Predicted: {predicted_label}. Correct? (y/n): \").lower() == 'y'\n",
-    "\n",
+    "        \n",
     "        if not is_correct:\n",
-    "            is_new_class = input(\"Is this a new class? (y/n): \").lower() == 'y'\n",
+    "            is_new_class = input(\"New class? (y/n): \").lower() == 'y'\n",
     "            if is_new_class:\n",
-    "                new_class = input(\"Enter class name: \")\n",
+    "                new_class = input(\"Class name: \").strip()\n",
     "                if new_class not in le.classes_:\n",
     "                    le.classes_ = np.append(le.classes_, new_class)\n",
-    "                    print(f\"New class '{new_class}' added.\")\n",
+    "                    self.n_clusters += 1\n",
+    "                    print(f\"Added '{new_class}'. Total clusters: {self.n_clusters}\")\n",
     "                else:\n",
-    "                    print(\"Class already exists.\")\n",
+    "                    print(\"Class exists. Using existing label.\")\n",
     "            else:\n",
-    "                correct_label = input(\"Enter correct label: \")\n",
-    "                # Validate label exists\n",
-    "                if correct_label not in le.classes_:\n",
-    "                    print(\"Error: Label does not exist.\")\n",
+    "                new_class = input(\"Correct label: \").strip()\n",
+    "                if new_class not in le.classes_:\n",
+    "                    print(\"Error: Invalid label\")\n",
     "                    return\n",
-    "            # Store data for retraining\n",
-    "            self.data.append(image_features)\n",
-    "            self.labels.append(correct_label if not is_new_class else new_class)\n",
+    "\n",
+    "            self.new_data.append(features)\n",
+    "            self.new_labels.append(new_class)\n",
     "            print(\"Feedback stored. Retrain when ready.\")\n",
     "        else:\n",
-    "            print(\"Feedback recorded. Thank you!\")\n",
-    "        \n",
+    "            print(\"Correct prediction recorded.\")\n",
+    "\n",
     "    def retrain_model(self):\n",
-    "        if not self.data:\n",
-    "            print(\"No new data to retrain.\")\n",
+    "        \"\"\"Quick retrain using only new feedback data\"\"\"\n",
+    "        if not self.new_data:\n",
+    "            print(\"No new data to retrain\")\n",
     "            return\n",
-    "        # Encode labels\n",
-    "        encoded_labels = le.transform(self.labels)\n",
-    "        # Transform all data\n",
-    "        updated_features = self.pca.transform(self.data)\n",
-    "        # Retrain KMeans\n",
+    "\n",
+    "        # Convert labels to integers\n",
+    "        encoded_labels = le.transform(self.new_labels)\n",
+    "        \n",
+    "        # Apply PCA transform\n",
+    "        transformed = self.pca.transform(self.new_data)\n",
+    "        \n",
+    "        # Retrain with updated cluster count\n",
     "        self.model = KMeans(\n",
-    "            n_clusters=len(le.classes_), \n",
-    "            init='k-means++', \n",
-    "            n_init=100\n",
+    "            n_clusters=self.n_clusters,\n",
+    "            init='k-means++',\n",
+    "            n_init=10  # Reduced for faster training\n",
     "        )\n",
-    "        self.model.fit(updated_features)\n",
-    "        # Reset stored data\n",
-    "        self.data, self.labels = [], []\n",
-    "        print(\"Model retrained with new data.\")"
+    "        self.model.fit(transformed)\n",
+    "        \n",
+    "        print(f\"Model retrained with {self.n_clusters} clusters\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Feature Extraction Functions"
    ]
   },
   {
@@ -90,86 +180,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vgg16_path = Path('..','models','VGG16.h5')\n",
-    "if not vgg16_path.is_file():\n",
-    "    vgg16 = keras.applications.VGG16(include_top=True,  # include fully connected layers\n",
-    "                                     weights='imagenet') # use pre-trained model\n",
-    "    vgg16.save(vgg16_path) # save model so we don't have to download it everytime\n",
-    "    \n",
-    "else:   \n",
-    "    vgg16 = keras.models.load_model(vgg16_path) # use saved model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def layer_extractor(model=vgg16, layer='fc1'):\n",
-    "    \"\"\"\n",
-    "    returns a model that will extract the outputs of *layer* from *model*.\n",
-    "    \n",
-    "    Parameters\n",
-    "    -------------\n",
-    "    model: keras model\n",
-    "        full model from which intermediate layer will be extracted\n",
-    "    layer: string\n",
-    "        name of layer from which to extract outputs\n",
-    "    \n",
-    "    Returns\n",
-    "    -------------\n",
-    "    new_model: keras model\n",
-    "        feature extractor model which takes the same inputs as *model* and returns the outputs\n",
-    "        of the intermediate layer specified by *layer* by calling new_model.predict(inputs)\n",
-    "    \"\"\"\n",
-    "    assert layer in [x.name for x in model.layers]  # make sure the layer exists\n",
-    "\n",
-    "    new_model = keras.Model(inputs = vgg16.input, outputs=[vgg16.get_layer(layer).output])\n",
-    "    \n",
-    "    return new_model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fc1_extractor = layer_extractor()\n",
-    "fc1 = fc1_extractor.predict(images, verbose=True)\n",
-    "\n",
-    "# save results\n",
-    "results = {'filename' : files,\n",
-    "           'features': fc1,\n",
-    "          'labels': labels,\n",
-    "           'layer_name': 'fc1'\n",
-    "          }\n",
-    "\n",
-    "feature_dir = Path('..','data','features')\n",
-    "os.makedirs(feature_dir, exist_ok=True)\n",
-    "with open(feature_dir / 'VGG16_fc1_features_std.pickle', 'wb') as f:\n",
-    "    pickle.dump(results, f)\n",
-    "\n",
-    "print(fc1.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Example usage in feedback loop:\n",
     "from tensorflow.keras.applications.vgg16 import preprocess_input\n",
     "from tensorflow.keras.preprocessing import image\n",
     "\n",
-    "def extract_features(image_path):\n",
-    "    img = image.load_img(image_path, target_size=(224, 224))\n",
+    "def extract_features(img_path):\n",
+    "    \"\"\"Feature extractor for live images\"\"\"\n",
+    "    img = image.load_img(img_path, target_size=(224, 224))\n",
     "    img_array = image.img_to_array(img)\n",
     "    img_array = preprocess_input(img_array)\n",
-    "    features = fcl_extractor.predict(np.expand_dims(img_array, axis=0))\n",
-    "    return features.flatten()"
+    "    return img_array.flatten()  # Simplified for demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Demonstration Workflow"
    ]
   },
   {
@@ -178,18 +204,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize system\n",
-    "fb_system = FeedbackSystem()\n",
-    "\n",
-    "# For a new image:\n",
-    "image_path = \"path/to/new_image.bmp\"\n",
-    "features = extract_features(image_path)\n",
-    "\n",
-    "# Get prediction and feedback\n",
-    "fb_system.process_feedback(features)\n",
-    "\n",
-    "# After collecting enough feedbacks:\n",
-    "fb_system.retrain_model()"
+    "# Initialize feedback system\n",
+    "fb_system = FeedbackSystem()"
    ]
   },
   {
@@ -198,12 +214,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example usage\n",
-    "fb_system = FeedbackSystem()\n",
-    "new_image_features = [...]  # Extract features for a new image\n",
-    "fb_system.process_feedback(new_image_features)\n",
-    "# After collecting enough feedback data:\n",
-    "# fb_system.retrain_model(new_data_list, new_label_list)"
+    "# Demo sequence\n",
+    "demo_images = [\n",
+    "    (\"new_class_1.bmp\", True),\n",
+    "    (\"new_class_2.bmp\", True),\n",
+    "    (\"existing_class.bmp\", False)\n",
+    "]\n",
+    "\n",
+    "for img_path, is_new in demo_images:\n",
+    "    features = extract_features(img_path)\n",
+    "    fb_system.process_feedback(features)\n",
+    "    \n",
+    "    if is_new:\n",
+    "        fb_system.retrain_model()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Visualization (Optional)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Optional: Add visualization code from 03_standard.ipynb here\n",
+    "\n",
+    "Include t-SNE plots or confusion matrices if time permits"
    ]
   }
  ],
